tdf#115192 XLSX export: fix hyperlink inserted to shape

Hyperlink inserted to shape didn't work after export, because
the LO wrote TargetMode="External" code incorrectly in the xml.

test_115192.xlsx: Test file from Excel 2016.

Change-Id: I3a9d39c1aa5de5af6d1ca43d16c45a5401ec6f3d