sc/qa/unit/subsequent_export-test.cxx
@@ -211,6 +211,7 @@ public:
     void testTdf121612();
     void testPivotCacheAfterExportXLSX();
     void testTdf114969XLSX();
+    void testTdf115192XLSX();
 
     void testXltxExport();
 
@@ -329,6 +330,7 @@ public:
     CPPUNIT_TEST(testTdf121612);
     CPPUNIT_TEST(testPivotCacheAfterExportXLSX);
     CPPUNIT_TEST(testTdf114969XLSX);
+    CPPUNIT_TEST(testTdf115192XLSX);
 
     CPPUNIT_TEST(testXltxExport);
 
@@ -4170,6 +4172,25 @@ void ScExportTest::testTdf114969XLSX()
     CPPUNIT_ASSERT(pDoc);
     assertXPath(pDoc, "/x:worksheet/x:hyperlinks/x:hyperlink[1]", "location", "'1.1.1.1'!C1");
     assertXPath(pDoc, "/x:worksheet/x:hyperlinks/x:hyperlink[2]", "location", "'1.1.1.1'!C2");
+}
+
+void ScExportTest::testTdf115192XLSX()
+{
+    ScDocShellRef xDocSh = loadDoc("test_115192.", FORMAT_XLSX);
+    CPPUNIT_ASSERT(xDocSh.is());
+
+    xmlDocPtr pDoc = XPathHelper::parseExport2(*this, *xDocSh, m_xSFactory, "xl/drawings/_rels/drawing1.xml.rels", FORMAT_XLSX);
+    CPPUNIT_ASSERT(pDoc);
+
+    OUString sFileName = "C:/Users/tothtun/Desktop/test.xlsx";
+    OUString aFileName = "file:///" + sFileName.replace('/', 0x5c);
+    assertXPath(pDoc, "/r:Relationships/r:Relationship[@Id='rId1']", "Target", aFileName);
+    assertXPath(pDoc, "/r:Relationships/r:Relationship[@Id='rId2']", "Target", "#Sheet2!A1");
+    assertXPath(pDoc, "/r:Relationships/r:Relationship[@Id='rId3']", "Target", "https://bugs.documentfoundation.org/show_bug.cgi?id=115192");
+
+    assertXPath(pDoc, "/r:Relationships/r:Relationship[@Id='rId1']", "TargetMode", "External");
+    assertXPathNoAttribute(pDoc, "/r:Relationships/r:Relationship[@Id='rId2']", "TargetMode");
+    assertXPath(pDoc, "/r:Relationships/r:Relationship[@Id='rId3']", "TargetMode", "External");
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(ScExportTest);
